[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://CoinSheet.png" type="Texture" id=3]
[ext_resource path="res://Heart.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "Spin"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 396.657
margin_top = 34.0
margin_right = 10.6573
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Coin x" type="Label" parent="."]
anchor_right = 1.0
margin_left = 363.232
margin_top = 30.9618
margin_right = -22.7677
margin_bottom = 81.9618
custom_fonts/font = SubResource( 1 )
text = "x"

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -80.1226
margin_bottom = 78.8774
custom_fonts/font = SubResource( 1 )
text = "Collect 10 Coins"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.5
margin_top = -200.0
margin_right = 130.5
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="." groups=[
"coins",
]]
editor/display_folded = true
position = Vector2( 341.67, 63.1395 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
frame = 1
region_enabled = true
region_rect = Rect2( 0, 0, 390, 260 )
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Spin = SubResource( 3 )

[node name="Heart1" parent="." instance=ExtResource( 4 )]
position = Vector2( 69.1042, 64.1237 )

[node name="Heart2" parent="." instance=ExtResource( 4 )]
position = Vector2( 126.38, 64.1237 )

[node name="Heart3" parent="." instance=ExtResource( 4 )]
position = Vector2( 182.41, 64.1237 )
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
